[package]
name = "i_shape"
version = "1.5.0"
authors = ["Nail Sharipov <nailxsharipov@gmail.com>"]
edition = "2021"
description = "iShape is a compact and efficient library specifically designed for representing 2D data structures using IntPoint."
license = "MIT"
repository = "https://github.com/iShape-Rust/iShape"

[dependencies]
i_float = { version = "~1.5.0"}
#i_float = { path = "../iFloat" }
serde = { version = "^1.0", features = ["derive"] }
