[package]
name = "i_shape"
version = "1.14.0"
authors = ["Nail Sharipov <nailxsharipov@gmail.com>"]
edition = "2024"
description = "iShape is a compact and efficient library specifically designed for representing 2D data structures using IntPoint."
license = "MIT"
repository = "https://github.com/iShape-Rust/iShape"

categories = ["no-std", "data-structures"]

[features]
serde = ["dep:serde", "i_float/serde"]

[dependencies]
i_float = { version = "^1.15.0"}
#i_float = { path = "../iFloat" }
serde = { version = "^1.0", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
rand = { version = "~0.9" }